Update 'backend-tests-go-ilaaiwfj' component image to: quay.io/rhtap_qe/backend-tests-go-ilaaiwfj:5f7485260efa937b987d22bfd769ae11e76732da@sha256:1e57f1e4260a7d6d1ecbae9e1fb92e08f8a9eefb775dbba92af715700acdce57

--- a/components/backend-tests-go-ilaaiwfj/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ilaaiwfj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ilaaiwfj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ilaaiwfj:5f7485260efa937b987d22bfd769ae11e76732da@sha256:1e57f1e4260a7d6d1ecbae9e1fb92e08f8a9eefb775dbba92af715700acdce57
+          name: container-image
